my reservations page is getting designed

--- a/src/main/resources/templates/home/flights.html
+++ b/src/main/resources/templates/home/flights.html
@@ -404,7 +404,7 @@
                     ${searchParameters.get('departureCity')} + ' to ' + ${searchParameters.get('arrivalCity')} + ' | ' + ${searchParameters.get('departureDate')}"></h2>
             </div>
             <table class="table table-bordered">
-                <thead class="" style="background-color: #687484">
+                <thead style="background-color: #687484">
                 <tr>
                     <th style="width: 20%">FLIGHT</th>
                     <th style="width: 20%">FROM</th>
