--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -350,7 +350,7 @@
 </nav>
 
 <div tabindex="-1"
-      style="background-image: url(https://cdn.turkishairlines.com/m/6761929144cccc1e/original/anasayfa-1400.webp);
+      style="background-image: url(https://cdn.turkishairlines.com/m/295acd9a3b3a8b23/original/kapadokya.png);
       height: 50vh;background-size: cover; position: absolute;width: 100%; z-index: -1">
 </div>
 
