--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -23,6 +23,13 @@
             font-family: 'Roboto', sans-serif;
         }
 
+
+        body {
+            /*background-image: url("https://www.kayak.com/res/images/horizon/flights/airline/generic_airline.jpg?v=a8fb9a2dacdb441f72b0e1c27ff1eb9d4a22f974&cluster=4");*/
+            /*background-size: cover;*/
+            background-color: #384454
+        }
+
         .container {
             display: flex;
             justify-content: center;
@@ -41,11 +48,23 @@
             max-width: 800px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             background-color: #fff;
+            align-items: center;
+        }
+
+        .login-header {
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         h2 {
             text-align: center;
             margin-bottom: 20px;
+            background-color: #f01c34;
+            color: white;
+            padding: 10px 40px;
+            border-radius: 3px;
         }
 
         label {
@@ -79,7 +98,7 @@
             font-weight: bold;
             border: none;
             border-radius: 5px;
-            background-color: #007bff;
+            background-color: #f01c34;
             color: #fff;
             cursor: pointer;
             font-size: 16px;
@@ -89,17 +108,17 @@
 
         button[type="submit"]:hover,
         button[type="button"]:hover {
-            background-color: #0062cc;
+            background-color: #F84659FF;
         }
 
         button[type="button"]:last-of-type {
             background-color: transparent;
-            color: #007bff;
+            color: #f01c34;
         }
 
         button[type="button"]:last-of-type:hover {
             background-color: transparent;
-            color: #0062cc;
+            background-color: #F84659FF;
         }
 
         .forgot-password {
@@ -135,16 +154,63 @@
                 padding: 8px;
             }
         }
+        .navbar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #232b38;
+            padding: 20px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            position: sticky;
+        }
+
+        .navbar-logo {
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+
+
+        .navbar-links a {
+            color: #ececec;
+            border: 3px solid #232b38;
+            padding: 15px 30px;
+            text-decoration: none;
+            transition: .2s;
+            font-weight: bold;
+
+        }
+
+        .navbar-links a:hover {
+            /*background-color: #20242c;*/
+            color: white;
+            border-bottom: 3px solid red;
+
+        }
 
 
     </style>
 </head>
 <body>
+<nav class="navbar">
+    <div class="navbar-logo">
+        <a th:href="@{/login}"><img src="https://cdn.turkishairlines.com/m/2190da9e53a70e4e/original/THY-LOGO.png"
+                                   class="d-none d-lg-block d-xl-block d-xxl-block" height="40px"></a>
+    </div>
+</nav>
+
+<div tabindex="-1"
+     style="background-image: url(https://cdn.turkishairlines.com/m/69c7281b736808a/original/HakkimizdaHeader-jpg.jpg);
+      height: 50vh;background-size: cover; position: absolute;width: 100%; z-index: -1; border-bottom: 2px solid black">
+</div>
 
 <div class="container">
     <form th:action="@{/auth/authenticate}" method="post">
+        <div class="login-header">
+            <h2>LOGIN</h2>
+        </div>
 
-        <h2>LOGIN</h2>
         <div th:if="${param.error}">
             <div class="alert alert-danger alert-dismissible fade show col-xs-offset-1 col-xs-10 text-center">
                 <em>Incorrect email or password.</em>
@@ -170,6 +236,6 @@
             <p>Not a member? <a th:href="@{/register}">Sign up</a></p>
         </div>
     </form>
-
+</div>
 </body>
 </html>
