--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -59,7 +59,7 @@
             justify-content: space-between;
             align-items: center;
             background-color: #232b38;
-            padding: 20px;
+            padding: 10px 20px;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
@@ -375,7 +375,7 @@
                            <div class="form-group departure">
                                <label for="from-input">From</label>
                                <div id="departure">
-                                   <input type="text" name="departure-airport" onfocus="showFilters('departure-airport-filtered-list')" id="from-input" class="form-control"
+                                   <input type="text" autocomplete="off" name="departure-airport" onfocus="showFilters('departure-airport-filtered-list')" id="from-input" class="form-control"
                                           onkeyup="filterAirports('from-input', 'departure-airport-filtered-list', 'departure-airport-codes')" required>
                                    <div class="list-group" id="departure-airport-filtered-list"></div>
                                    <input type="text" id="departure-airport-codes" name="departure-airport-codes" style="display: none">
@@ -386,7 +386,7 @@
                            <div class="form-group">
                                <label for="to-input">To</label>
                                <div id="arrival">
-                                   <input type="text" name="arrival-airport" onfocus="showFilters('arrival-airport-filtered-list')" class="form-control" id="to-input"
+                                   <input type="text" autocomplete="off" name="arrival-airport" onfocus="showFilters('arrival-airport-filtered-list')" class="form-control" id="to-input"
                                           onkeyup="filterAirports('to-input', 'arrival-airport-filtered-list', 'arrival-airport-codes')" required>
                                    <div class="list-group" id="arrival-airport-filtered-list"></div>
                                    <input type="text" id="arrival-airport-codes" name="arrival-airport-codes" style="display: none">
