--- a/src/main/resources/templates/home/myCards.html
+++ b/src/main/resources/templates/home/myCards.html
@@ -51,7 +51,7 @@
             justify-content: space-between;
             align-items: center;
             background-color: #232b38;
-            padding: 20px;
+            padding: 10px 20px;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
