--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -159,7 +159,7 @@
             justify-content: center;
             align-items: center;
             background-color: #232b38;
-            padding: 20px;
+            padding: 10px 20px;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
             position: sticky;
         }
