--- a/src/main/resources/templates/home/myFlights.html
+++ b/src/main/resources/templates/home/myFlights.html
@@ -22,32 +22,23 @@
         let reservations = [[${reservations}]];
         /*]]>*/
 
-        function showReservationDetail(id) {
-            let reservationDetail = document.getElementById('reservation-detail-' + id);
-            reservationDetail.className = "reservation-summary";
-        }
-        function hideReservationDetail(id) {
-            let reservationDetail = document.getElementById('reservation-detail-' + id);
-            reservationDetail.className = "d-none reservation-summary";
-        }
-
-        function manageVisibilityOfReservation(id) {
-            let selectedReservation = document.getElementById('reservation-detail-' + id);
-
-            if (selectedReservation.className === 'd-none reservation-summary') {
-                hideAllReservations();
-                showReservationDetail(id);
-            } else {
-                hideAllReservations();
-            }
-        }
-
-        function hideAllReservations() {
-            reservations.forEach(reservation => {
-                let res = document.getElementById('reservation-detail-' + reservation.id);
-                res.className = 'd-none reservation-summary';
+        $(document).ready(function() {
+            $('.flight-details-button').click(function() {
+                let summaryDiv = $(this).closest('.flights-container').find('.reservation-summary');
+                if (summaryDiv.hasClass('active')) {
+                    summaryDiv.slideUp().removeClass('active');
+                    $(this).closest('.flight-details-button').find('.details-button').removeClass('fa-angle-up').addClass('fa-angle-down');
+                } else {
+                    $('.reservation-summary.active').removeClass('active').slideUp();
+                    summaryDiv.slideDown().addClass('active');
+                    $('.flight-details-button i').removeClass('fa-angle-up').addClass('fa-angle-down');
+                    let icon = $(this).closest('.flight-details-button').find('.details-button');
+                    icon.toggleClass('fa-angle-down fa-angle-up');
+                }
             });
-        }
+
+        });
+
 
     </script>
     <style>
@@ -130,7 +121,6 @@
             padding: 4px;
             /*border-radius: 50%;*/
             /* Add a transition to animate the box-shadow */
-            transition: box-shadow 0.2s ease-in-out;
         }
 
         .icon {
@@ -141,19 +131,8 @@
             height: 24px;
             width: 24px;
             /* Set the initial box-shadow */
-            box-shadow: none;
             /* Set the border-radius to make it a circle */
-            border-radius: 50%;
             /* Add a transition to animate the box-shadow */
-            transition: box-shadow 0.2s ease-in-out;
-            cursor: pointer;
-        }
-
-        .icon:hover {
-            /* Add a box-shadow on hover */
-            box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-            /* Add a slight scale effect on hover */
-            /*transform: scale(1.1);*/
         }
 
         .flight-demo {
@@ -233,11 +212,20 @@
         }
 
         .reservation-summary {
+            height: 0;
             overflow: hidden;
-            transition-property: height;
-            transition-duration: 1s;
-            scroll-behavior: smooth;
         }
+
+        .reservation-summary.active {
+            overflow: visible;
+            height: auto;
+        }
+
+        .flight-details-button {
+            cursor: pointer;
+        }
+
+
 
     </style>
 </head>
@@ -267,12 +255,18 @@
     <div th:each="reservation : ${reservations}" class="flights-container d-flex align-items-center flex-column justify-content-start mt-4 col-lg-8">
         <div class="flight-demo row d-flex align-items- justify-content-start flex-column col-lg-12">
             <div class="flights-header">
-                <div class="row justify-content-between p-3">
+                <div class="row justify-content-between p-3 col-12 mr-0">
                     <div class="col-6 d-flex align-content-start justify-content-center">
                         <div class="col-1"><span class="fa fa-check-circle" aria-hidden="true"></span></div>
-                        <div th:text="${#strings.capitalize(reservation.getReservationType())} + ' | ' + ${reservation.getDate()}" class="col-11"><span>ROUND TRIP | 02-06-2023</span></div>
+                        <div th:text="${#strings.capitalize(reservation.getReservationType())}" class="col-11"><span>ROUND TRIP | 02-06-2023</span></div>
                     </div>
-                    <div class="col-6"><span th:text="'#' + ${reservation.getId()}" class="pull-right"></span></div>
+                    <div class="col-6 d-flex justify-content-end align-items-end">
+                        <div class="col-9"></div>
+                        <div class="col-3 d-flex justify-content-end">
+                            <span th:text="${reservation.getDate()}" class="align-self-end"></span>
+                        </div>
+
+                    </div>
                 </div>
             </div>
             <div class="row p-3 mx-0 col-12">
@@ -327,12 +321,12 @@
                 <div class="flight-details-button col-2 d-flex justify-content-center align-items-center">
                     <div class="icon-container text-center h-50 ">
                         <p class="font-weight-bold">Booking details</p>
-                        <span th:onclick="'manageVisibilityOfReservation(\'' + ${reservation.getId()} + '\')'" class="fa fa-angle-down font-weight-bold icon" style="color: #6c7c84"></span>
+                        <i class="details-button fa fa-angle-down font-weight-bold icon" style="color: #6c7c84"></i>
                     </div>
                 </div>
             </div>
         </div>
-        <div  th:id="'reservation-detail-' + ${reservation.getId()}" class="d-none reservation-summary">
+        <div  th:id="'reservation-detail-' + ${reservation.getId()}" class="reservation-summary">
             <div class="flight-details row d-flex justify-content-start align-items-center col-lg-12 ">
                 <div class="summary p-3">
                     <div class="row">
@@ -381,7 +375,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="outbound-flight-table">
+                    <div class="outbound-flight-table mb-4">
                         <div class="row">
                             <div class="col-12">
                                 <table class="table table-bordered">
@@ -507,21 +501,21 @@
                                     <th style="width: 30%">PASSENGER</th>
                                     <th style="width: 25%">DATE OF BIRTH</th>
                                     <th style="width: 25%">PHONE NUMBER</th>
-                                    <th style="width: 20%">ID</th>
+                                    <th style="width: 20%">GENDER</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr th:each="passenger : ${reservation.getPassengers()}">
                                     <td class="d-flex justify-content-center align-items-start">
                                         <div class="col-4">
                                             <div class="image d-flex justify-content-center align-items-center rounded-circle" style="width: 65px; height: 65px;
                                                 background-color: #f01c34">
-                                                <h5 class="text-white m-0">EG</h5>
+                                                <h5 th:text="${#strings.substring(passenger.getName(),0,1)} + ${#strings.substring(passenger.getSurname(),0,1)}" class="text-white m-0">EG</h5>
                                             </div>
                                         </div>
                                         <div class="col-8 justify-content-center">
                                             <div class="row">
-                                                <h6 class="font-weight-bold m-0">Mr. Emir GÜLER</h6>
+                                                <h6 th:text="${passenger.getName()} + ' ' + ${passenger.getSurname()}" class="font-weight-bold m-0"></h6>
                                             </div>
                                             <div class="row">
                                                 <div class="col-12 m-0">
@@ -538,17 +532,17 @@
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center justify-content-center text-center mt-3">
-                                            <h3>03-09-2000</h3>
+                                            <h3 th:text="${passenger.getDateOfBirth()}">03-09-2000</h3>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center justify-content-center text-center mt-3">
-                                            <h3>(531) 251-1541</h3>
+                                            <h3 th:text="${passenger.getPhoneNumber()}">(531) 251-1541</h3>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="d-flex align-items-center justify-content-center text-center mt-3">
-                                            <h3>23</h3>
+                                            <h3 th:text="${passenger.getGender()}"></h3>
                                         </div>
                                     </td>
                                 </tr>
@@ -556,7 +550,6 @@
                             </table>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
